@@ -19,7 +19,7 @@ BEGIN {
        $got_YAML = 0 if $@;
     }
     plan skip_all => "Some kind of YAML parser is required for this test" unless $got_YAML;    
-    plan tests => 10;
+    plan tests => 19;
     use_ok('FCGI::Engine::Manager');
 }
 
@@ -39,9 +39,13 @@ lives_ok {
 
 #diag join "\n" => map { chomp; s/\s+$//; $_ } grep { /fcgi|overseer|minion/ } `ps auxwww`;
 
+is( $m->status, "foo.server is running\nbar.server is running\n", '... got the right status' );
+
 lives_ok {
     $m->stop;
 } '... stopped okay';
+
+is( $m->status, "foo.server is not running\nbar.server is not running\n", '... got the right status' );
 
 # ... now try loading just a single server ... (make sure everything is cleaned up right)
 
@@ -49,11 +53,17 @@ lives_ok {
     $m->start('foo.server');
 } '... started okay';
 
+is( $m->status('foo.server'), "foo.server is running\n", '... got the right status' );
+is( $m->status('bar.server'), "bar.server is not running\n", '... got the right status' );
+
 #diag join "\n" => map { chomp; s/\s+$//; $_ } grep { /fcgi|overseer|minion/ } `ps auxwww`;
 
 lives_ok {
     $m->stop('foo.server');
 } '... stopped okay';
+
+is( $m->status('foo.server'), "foo.server is not running\n", '... got the right status' );
+is( $m->status('bar.server'), "bar.server is not running\n", '... got the right status' );
 
 # ... now try starting, restarting and then stopping again ...
 
@@ -61,13 +71,19 @@ lives_ok {
     $m->start('foo.server');
 } '... started okay';
 
+is( $m->status('foo.server'), "foo.server is running\n", '... got the right status' );
+
 lives_ok {
     $m->restart('foo.server');
 } '... restarted okay';
 
+is( $m->status('foo.server'), "foo.server is running\n", '... got the right status' );
+
 lives_ok {
     $m->stop('foo.server');
 } '... stopped okay';
+
+is( $m->status('foo.server'), "foo.server is not running\n", '... got the right status' );
 
 
 unlink $ENV{MX_DAEMON_STDOUT};
